--- a/App.config
+++ b/App.config
@@ -12,4 +12,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="DoTheyKnowMainDBEntities" connectionString="metadata=res://*/DoTheyKnowDB.csdl|res://*/DoTheyKnowDB.ssdl|res://*/DoTheyKnowDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MARCIN\PROJECTC;initial catalog=DoTheyKnowMainDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
