--- a/DoTheyKnow.csproj
+++ b/DoTheyKnow.csproj
@@ -47,6 +47,8 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -65,6 +67,32 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="DoTheyKnowDB.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DoTheyKnowDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="kom.cs">
+      <DependentUpon>DoTheyKnowDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Morele.cs">
+      <DependentUpon>DoTheyKnowDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sp_helpdiagramdefinition_Result.cs">
+      <DependentUpon>DoTheyKnowDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sp_helpdiagrams_Result.cs">
+      <DependentUpon>DoTheyKnowDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sub.cs">
+      <DependentUpon>DoTheyKnowDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="sysdiagram.cs">
+      <DependentUpon>DoTheyKnowDB.tt</DependentUpon>
+    </Compile>
+    <Compile Include="wsei.cs">
+      <DependentUpon>DoTheyKnowDB.tt</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -72,6 +100,16 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="DoTheyKnowDB.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DoTheyKnowDB.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DoTheyKnowDB.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DoTheyKnowDB.edmx</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -96,6 +134,13 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EntityDeploy Include="DoTheyKnowDB.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>DoTheyKnowDB.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="DoTheyKnowDB.edmx.diagram">
+      <DependentUpon>DoTheyKnowDB.edmx</DependentUpon>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -104,6 +149,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="DoTheyKnowDB.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>DoTheyKnowDB.edmx</DependentUpon>
+      <LastGenOutput>DoTheyKnowDB.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="DoTheyKnowDB.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>DoTheyKnowDB.edmx</DependentUpon>
+      <LastGenOutput>DoTheyKnowDB.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
