Podłączenie bazy danych i sprawdzanie czy wynik jest jest w tabeli kom

--- a/App.config
+++ b/App.config
@@ -13,6 +13,10 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="DoTheyKnowMainDBEntities" connectionString="metadata=res://*/DoTheyKnowDB.csdl|res://*/DoTheyKnowDB.ssdl|res://*/DoTheyKnowDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MARCIN\PROJECTC;initial catalog=DoTheyKnowMainDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DoTheyKnowMainDBEntities" connectionString="metadata=res://*/DoTheyKnowDB.csdl|res://*/DoTheyKnowDB.ssdl|res://*/DoTheyKnowDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MARCIN\PROJECTC;initial catalog=DoTheyKnowMainDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="DoTheyKnow.Properties.Settings.DoTheyKnowMainDBConnectionString"
+      connectionString="Data Source=MARCIN\PROJECTC;Initial Catalog=DoTheyKnowMainDB;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
