--- a/DoTheyKnow.csproj
+++ b/DoTheyKnow.csproj
@@ -95,6 +95,9 @@
     <Compile Include="sysdiagram.cs">
       <DependentUpon>DoTheyKnowDB.tt</DependentUpon>
     </Compile>
+    <Compile Include="Window1.xaml.cs">
+      <DependentUpon>Window1.xaml</DependentUpon>
+    </Compile>
     <Compile Include="wsei.cs">
       <DependentUpon>DoTheyKnowDB.tt</DependentUpon>
     </Compile>
@@ -120,6 +123,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Window1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
